[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stress_tool"
version = "1.2.0"
authors = [
  { name="Nick Tsai", email="myintaer@gmail.com" },
]
description = "Stress test tool with statistical TPS reports based on Worker Dispatcher in Python"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "worker-dispatcher>=1.0.7",
    "openpyxl>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yidas/python-stress-tool"
Issues = "https://github.com/yidas/python-stress-tool/issues"